# alexa-ai-lambda

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
docker/: Dockerfile
docs/: SoW.md  features.md
scripts/: build.sh  deploy.sh  package-docker.sh  package-zip-node.js  package-zip.sh  test-endpoint.js  test-local.js
src/: ai-handler.js  ai_handler.rs  alexa-handler.js  alexa_handler.rs  index.js  main.rs  models.rs
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
